<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CriarCalendarioActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:text="@string/descricao" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/textView3"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/idConjunto" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/textView5"
        android:ems="10"
        android:hint="@string/idConjunto"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:textSize="20sp"
        android:text="@string/data" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/textView7"
        android:ems="10"
        android:hint="@string/data"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:textSize="20dp"
        android:text="@string/manutencao" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/textView9"
        android:ems="10"
        android:hint="@string/manutencao"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="41dp"
        android:textSize="20dp"
        android:text="@string/responsavel" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/textView11"
        android:ems="10"
        android:hint="@string/responsavel"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/button_bg_round"
        android:text="Criar" />

</RelativeLayout>