<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/semp"
    tools:context="com.example.maptechnology.manutencaoapp.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="303dp"
        android:layout_height="438dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/tcl" />

        <EditText
            android:id="@+id/editMatricula"
            android:layout_width="162dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/matricula"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/edtIp"
            app:layout_constraintHorizontal_bias="0.214"
            app:layout_constraintStart_toStartOf="@+id/edtIp"
            app:layout_constraintTop_toBottomOf="@+id/edtIp" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="163dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editMatricula"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editMatricula"
            app:layout_constraintTop_toBottomOf="@+id/editMatricula" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bg_round"
            android:text="@string/entrar"
            app:layout_constraintEnd_toEndOf="@+id/editSenha"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="@+id/editSenha"
            app:layout_constraintTop_toBottomOf="@+id/editSenha" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Módulo de Manutenção"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/edtIp"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="IP"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.379"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
