<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsereAtividadesNaOrdemActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:layout_weight="0.4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="Manutenção:"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.046" />


                <Spinner
                    android:id="@+id/spnManutencao"
                    android:layout_width="240dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="52dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView16"
                    app:layout_constraintTop_toTopOf="@+id/textView16"
                    app:layout_constraintVertical_bias="0.166" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="335dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/textView16">

                    <RadioButton
                        android:id="@+id/rdbSubConjuntos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SubConjuntos"
                        tools:layout_editor_absoluteX="164dp"
                        tools:layout_editor_absoluteY="112dp" />

                    <RadioButton
                        android:id="@+id/rdbPecas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Peças"
                        tools:layout_editor_absoluteX="296dp"
                        tools:layout_editor_absoluteY="112dp" />
                    />

                </RadioGroup>

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/onde"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/radioGroup"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <Spinner
                    android:id="@+id/spnItem"
                    android:layout_width="240dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="52dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView19"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintStart_toEndOf="@+id/textView19"
                    app:layout_constraintTop_toTopOf="@+id/textView19"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/quando"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/spnManutencao"
                    app:layout_constraintStart_toEndOf="@+id/spnManutencao"
                    app:layout_constraintTop_toTopOf="@+id/spnManutencao"
                    app:layout_constraintVertical_bias="0.166" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/responsavel"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/spnItem"
                    app:layout_constraintStart_toEndOf="@+id/spnItem"
                    app:layout_constraintTop_toTopOf="@+id/spnItem"
                    app:layout_constraintVertical_bias="0.0" />

                <Spinner
                    android:id="@+id/spnResponsavel"
                    android:layout_width="240dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView21"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView21"
                    app:layout_constraintTop_toTopOf="@+id/textView21"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/edtDate"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    app:layout_constraintBottom_toBottomOf="@+id/textView20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView20"
                    app:layout_constraintTop_toTopOf="@+id/textView20"
                    app:layout_constraintVertical_bias="0.0" />

                <Switch
                    android:id="@+id/swtJaRealizada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:text="Já realizada?"
                    app:layout_constraintEnd_toEndOf="@+id/textView19"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView19"
                    tools:checked="false" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Hora Início:"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/swtJaRealizada"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/swtJaRealizada"
                    app:layout_constraintTop_toBottomOf="@+id/swtJaRealizada" />

                <EditText
                    android:id="@+id/edtHoraInicio"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="@+id/textView24"
                    app:layout_constraintStart_toEndOf="@+id/textView24"
                    app:layout_constraintTop_toTopOf="@+id/textView24"
                    app:layout_constraintVertical_bias="0.562" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:text="Hora Término:"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/edtHoraInicio"
                    app:layout_constraintStart_toEndOf="@+id/edtHoraInicio"
                    app:layout_constraintTop_toTopOf="@+id/edtHoraInicio"
                    app:layout_constraintVertical_bias="0.562" />

                <EditText
                    android:id="@+id/edtHoraTermino"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="@+id/textView25"
                    app:layout_constraintStart_toEndOf="@+id/textView25"
                    app:layout_constraintTop_toTopOf="@+id/textView25"
                    app:layout_constraintVertical_bias="0.562" />

                <EditText
                    android:id="@+id/edtManutencao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="@+id/textView16"
                    app:layout_constraintStart_toEndOf="@+id/textView16"
                    app:layout_constraintTop_toTopOf="@+id/textView16"
                    app:layout_constraintVertical_bias="0.25" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#a9a9a9"
            android:layout_weight="0.6">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:background="#d3d3d3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>